# UniversityDatabase-v2

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
docs/adr/: 001-roles-vs-inheritance.md  002-domain-infrastructure.md
src/: CMakeLists.txt  main.cpp
src/domain/: EmployeeRole.hpp  IRole.hpp  Person.hpp  Student.hpp
tests/: CMakeLists.txt  person_and_traits_tests.cpp  student_tests.cpp
